/*
 * Storage service abstracting possible storages
 */

syntax = "proto3";

package sha.zone.storage_service;

message DataRequest {}
message StorageResponse {}
message DeleteDataRequest {}

service StorageService {
  rpc Upload(stream DataRequest) returns (StorageResponse) {}
  rpc Update(stream DataRequest) returns (StorageResponse) {}
  rpc Delete(stream DeleteDataRequest) returns (StorageResponse) {}
}
